# mssql

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODO.md  deno.json  docker-compose.yml  package.json  release-please-config.json  tsconfig.docs.json  typedoc.json
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
.github_old/workflows/: ci.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: index.md
docs/guide/: binary.md  blob-streaming.md  bulk-insert.md  comb.md  connections.md  filestream.md  getting-started.md  installation.md  pooling.md  queries.md  runtime-packages.md  streaming.md  transactions.md  utf8.md
projects/mssql/: deno.json  install.ts  mod.ts  package.json
projects/mssql/core/: binary.ts  binary_test.ts  blob.ts  bulk.ts  collation_test.ts  config.ts  config_test.ts  connection.ts  connection_test.ts  exec_result.ts  exec_result_test.ts  filestream.ts  mod.ts  pool.ts  stream.ts  stream_test.ts  transaction_test.ts  types.ts
projects/mssql/ffi/: bun.ts  deno.ts  node.ts
projects/rust/: Cargo.toml
projects/rust-odbc-mssql/: Cargo.toml
projects/rust-odbc-mssql/src/: bulk.rs  (+4 more)
projects/rust/src/: bulk.rs  config.rs  debug.rs  error.rs  filestream.rs  handle.rs  lib.rs  pool.rs  query.rs  stream.rs
projects/ts-mssql/: deno.json  install.ts  mod.ts  package.json
run/: bin  binall  clean  dbdown  dbup  docs  docs-build  test-bun  test-deno  test-node  test-windows.ps1
run/scripts/: db-setup.ts  db-teardown.ts
(+50 files in other folders)
