[package]
name = "mssqlts"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "mssqlts"
crate-type = ["cdylib"]

[dependencies]
mssql-client = { version = "0.6", features = ["chrono", "uuid"] }
mssql-driver-pool = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
